	(c-FUNCALL-INLINE): use it
	(lambda-form-p): new function
	(c-form, inline-callable-function-lambda-p, c-FUNCTION): use it
	(shift-vars): new function
	(c-MAP-on-CARs, c-MAP-on-LISTs, c-MAPC, c-MAPL): use it
	(c-FLET, c-LABELS, c-FUNCTION-MACRO-LET, c-GENERIC-FLET)
	(c-GENERIC-LABELS): new macro GET-ANODE in their common macrolet

2001-12-20  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (version) [CROSS]: updated (19071996 --> 20010726)

2001-12-20  Arseny Slobodjuck <ampy@ich.dvo.ru>

	* lispbibl.d (OS_error): use asciz_out_s(), not asciz_out_1(),
	to output a string

2001-12-19  Stefan Kain  <stefan.kain@freenet.de>

	* compiler.lisp: translated all comments

2001-12-17  Sam Steingold  <sds@gnu.org>

	* type.lisp (canonicalize-type): extensive treatment of AND/OR
	and NOT (with flattening and special cases)
	(subtypep): a hack for NOT added; corrected T & NIL special cases

2001-12-17  Sam Steingold  <sds@gnu.org>

	* predtype.d (expand_deftype): check that (CAR TYPE-SPEC) is a
	symbol before calling GET

2001-12-12  Sam Steingold  <sds@gnu.org>

	simplify pathname directory lists
	* pathname.d (subst_coerce_normal_ss, subst_up_dotdot): folded
	into simplify_directory()
	(simplify_directory): new function: coerce to normal simple
	strings, replace ".." with :UP and collapse "foo/../"
	(parse_logical_pathnamestring, PARSE-NAMESTRING, merge_dirs): call it
	(subdir_namestring_parts): handle :UP
	(directory_list_valid_p): extracted from MAKE-PATHNAME
	(MAKE-PATHNAME): call simplify_directory() and
	directory_list_valid_p();
	Also: reverted the 2001-08-29 change: do NOT return a logical
	pathname when defaults is logical, but `logical' is false

2001-12-11  Sam Steingold  <sds@gnu.org>

	* socket.d (socket_getlocalname): when not resolving, init
	truename to a zero-length string
	Reported by Ian Wild <ian_wild@yahoo.com>

2001-11-29  Sam Steingold  <sds@gnu.org>

	* configure (link): remove the target ($2) first
	(maybe_mkdir): new function